src/ui/nodename/NodeCard.css
.node-card {
    padding: .25rem .25rem .5rem .25rem;
}

@media only screen and (max-width: 991px) {
    .node-card {
        width: 350px;
    }
}

@media only screen and (min-width: 992px) {
    .node-card {
        width: 400px;
    }
}

.node-card .unknown {
    font-style: italic;
    color: var(--bs-gray-600);
    text-align: center;
}

.node-card .main {
    display: flex;
}

.node-card .avatar-link {
    flex: none;
    margin-right: 1.7rem;
}

.node-card .body {
    flex: auto;
    overflow: hidden;
}

.node-card .body DIV {
    text-wrap: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.node-card .full-name {
    font-weight: 600;
    font-size: 1.29rem;
    line-height: 133%;
    color: var(--bs-gray-800);
}

.node-card .gender {
    font-style: italic;
    margin-left: .5em;
}

.node-card .name {
    color: var(--bs-gray-600);
    font-size: 1rem;
    line-height: 143%;
}

.node-card .title {
    font-size: 1rem;
    line-height: 143%;
    color: var(--bs-gray-800);
}

.node-card .people {
    margin-top: .5em;
}

.node-card .counter {
    display: inline-block;
    margin-right: 1.14rem;
    font-size: .86rem;
    line-height: 133%;
    color: var(--bs-gray-800);
}

.node-card .counter EM {
    display: block;
    font-weight: 600;
    font-size: 1.25rem;
    font-style: normal;
    line-height: 150%;
}

.node-card .counter TIME {
    text-decoration: underline dotted;
    color: var(--primary-800);
}

.node-card .buttons {
    margin-top: .85rem;
    display: flex;
    justify-content: space-between;
    width: 100%;
}

